# NeuroDraft

./: AutoSaveManager.cpp  AutoSaveManager.h  CMakeLists.txt  DraggableTabWidget.cpp  DraggableTabWidget.h  EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  PaneManager.cpp  PaneManager.h  ProjectDialog.cpp  ProjectDialog.h  ProjectManager.cpp  ProjectManager.h  ProjectTreeWidget.cpp  ProjectTreeWidget.h  README.md  UpdateManager.cpp  UpdateManager.h  main.cpp
